# roger

./: Cargo.toml  README.md  build.rs
src/: dog_api.rs  endpoints.rs  gui.rs  main.rs  structs.rs
src/structs/: dog_api.rs  gui.rs
