[package]
name = "roger"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
iced = { version= "0.12.1", features = ["image"] }
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
iced_aw = { version = "*", features = ["menu"] }

[target.'cfg(windows)'.build-dependencies]
winres = "*"

[package.metadata.winres]
OriginalFilename = "roger.exe"